Fix overflow on small lists

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,4 +5,5 @@
 .App-list {
   background-color: #eee;
   border-radius: 5px;
+  overflow: hidden;
 }
